--- a/index.css
+++ b/index.css
@@ -18,24 +18,70 @@
 
 /* ah so the animation name is grow and keyframes then dictates that.  Interesting thing for css */
 .box {
-  width: 50px;
-  height: 50px;
-  background: red;
+
+  width: 10px;
+  height: 10px;
+  background: blue;
   border: 1px solid black;
-  animation-name: first-animation;
-  animation-duration: 2s;
-  animation-delay: 1s;
-  animation-iteration-count: 4;
-  /* how many times the animation runs can be infinite to run forever */
-  animation-timing-function: ease-in;
-  animation-direction: alternate;
-  /* other properties are alternate, from normal to reverse and vice versa.  Alternate reverse, starts from finish to to */
-  animation-fill-mode: both;
-  /* When finished, what should it look like basically, forwards means once animation is finished go back to the beginning look.  Both basically does both and if you are oscillating it finishes wherever it finishes correctly */
+  animation: first-animation 2s ease-out 0s infinite alternate;
+  animation-fill-mode: forwards;
+
 }
 
+
 @keyframes first-animation {
+  0% {width: 10px; height: 10px; background: green;}
+  50% {width: 20px; height: 20px; background: red;}
+  100% {width: 50px; height: 50px; background: yellow;}
+
+}
+
+
+@keyframes second-animation {
   from {width: 100px; height: 100px; background: green; }
   to {width: 10px; height: 10px; background: yellow}
 
 }
+
+
+/* fase in beach and then title
+body {
+	margin: 0;
+}
+
+.image-wrapper {
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background: url("main.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	opacity: 0%;
+	animation: image-fade-in 1.5s ease-out 0s 1 forwards;
+	animation-fill-mode: forwards;
+}
+
+.title {
+	font-size: 4em;
+	text-transform: uppercase;
+	margin: 0;
+	font-family: Sen;
+	text-transform: uppercase;
+	text-align: center;
+	opacity: 0%;
+	animation: title-fade-in 1.1s ease-in-out 2s 1 forwards;
+	animation-fill-mode: both;
+}
+
+@keyframes image-fade-in {
+	from {opacity: 0%; width: 0%}
+	to {opacity: 100%; width: 100%}
+}
+
+@keyframes title-fade-in {
+	from {opacity: 0%}
+	to {opacity: 100%}
+} */
